# textual-gadgets

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: example.py  example.tcss
src/textual_gadgets/: modal_screens.py  screens.py  validators.py
src/textual_gadgets/_utils/: utils.py
src/tkgadgets/: screens.py
