[build-system]
requires = ["hatchling>=1.28.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "textual-gadgets"
version = "0.1.0"
description = "Widgets, functions and more for the python package Textual"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kaazul", email = "kaazul@pm.me" }
]
dependencies = [
    "email-validator>=2.3.0",
    "textual>=7.5.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/textual_gadgets"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
